Added content to chapter 2 for introducing its purpose

--- a/003DataWarehouseReference.tex
+++ b/003DataWarehouseReference.tex
@@ -1,5 +1,7 @@
 \section{Data Warehouse Reference-Architecture}
 \label{sec:referenceArchitecture}
+To order to have a common understanding about the topic of Data-Warehouse-Systems it is useful to quickly elaborate their fundamentals. Due to that the discussions and the considerations are easier to understand.\newline
+Therefore the term ''DWS'' will be defined and its responsibilities will be delimited. Afterwards an architecture will be introduced which will be taken as reference during this paper.
 
 \subsection{Defining the Data-Warehouse-System}
 Before elaborating the reference architecture let's have a look upon the term 'Data Warehouse' itself and understand its process.\newline
@@ -22,7 +24,7 @@ Now lets face the process needed to achieve that. The official term for that is 
 A system which used to be called Data Warehouse System should support and implement those steps in its software components. While developing such a DWS architectures, there leads no way around discussing the most commonly used reference explained by A. Bauer in his book 'Data Warehouse Systems'.\cite{dwsRefArchitecture}\newline
 \begin{figure}[htb]
     \centering
-    \includegraphics[scale=0.57]{pictures/DataWarehouseReferenceArchitecture.png}
+    \includegraphics[scale=0.45]{pictures/DataWarehouseReferenceArchitecture.png}
     \caption{Reference architecture for Data Warehouse Systems by A. Bauer \cite[p.~42]{dwsRefArchitecture}}
     \label{fig:referenceArchitecture}
 \end{figure} 
