Added quote for Data Mart constellations and added first content to chapter 3

--- a/004StateOfTheArtDWS.tex
+++ b/004StateOfTheArtDWS.tex
@@ -1,5 +1,7 @@
 \section{Other commonly DWS-Architectures}
 \label{sec:otherArchitectures}
+After having introduced the reference architecture this chapter aims to show other approaches for building Data-Warehouse-Systems. Main object of consideration is the distributed DWS architecture. This one was invented by Ralph Kimball and can be seen as counterpart to Inmons hub and spoke architecture.\newline
+Afterwards the characteristics of different data mart arrangements will be handled. This information will be used later on especially to deal with a flexible data provision. 
 
 \subsection{Distributed Data Warehousing Architecture}
 After having explained the reference architecture from A. Bauer which implements the hub and spoke idea from Inmon one very common alternative is presented. Ralph Kimball is another pioneer in this area who came up with a distributed data warehousing architecture based upon data marts connected to a bus system. \cite{surveyDWSArchs} Figure \ref{fig:distributedWarehouseArchitecture} visualises this in more detail.
@@ -15,4 +17,4 @@ As Breslin states 'Kimball's approach is a departure from traditional database d
 After the most commonly used architectures for Data Warehouse Systems have been outlined and the requirements regarding a DWS are pointed out, some newer technologies are introduced. In detail the fundamental ideas of micro-service and event-based architectures as well as Business Process Management will be elaborated. Further on these technologies will align in order to result into the final draft of the presented architecture.
 
 \subsection{Architectural Classification according to the Arrangement of Data Marts}
-
+\cite{sinz}
