--- a/bibliography.bib
+++ b/bibliography.bib
@@ -70,3 +70,14 @@
     author  = {Google Trends}, 
     url     = {https://www.google.com/trends}
 }
+
+@incollection{sinz,
+  author       = {E. J. Sinz, Achim, Ulbrich-vom Ende}, 
+  title        = {Architektur von Data-Warehouse-Systemen},
+  booktitle    = {Analytische Informationssysteme. Business-Intelligence-Technologien und –Anwendungen. Business-Intelligence-Technologien und –Anwendungen.},
+  publisher    = {Springer},
+  year         = 2010,
+  editor       = {P. Chamoni, P. Gluchowski},
+  series       = 4,
+  address      = {Berlin}
+}
