--- a/003DataWarehouseReference.tex
+++ b/003DataWarehouseReference.tex
@@ -38,4 +38,4 @@ The next part focuses upon the analytical-layer of the reference architecture. A
 \\
 On the right side of figure \ref{sec:referenceArchitecture} the management-layer is visualised. It contains components for managing the sequence- and data-flow and the metadata repository itself.\newline
 \\
-This should have described the fundamental ideas and concept of such a data warehouse system quite well without going into depths. The shown approach is closely related to Inmons hub and spoke architecture which will be introduced in the next section. If you want to get more know-how in this area feel free to do so, but it will not be covered in this article. 
+This should have described the fundamental ideas and concept of such a data warehouse system quite well without going into depths. The shown approach is closely related to Inmons hub and spoke architecture which will be introduced in the next section. 
