--- a/007ResultingArchitecture.tex
+++ b/007ResultingArchitecture.tex
@@ -6,3 +6,6 @@
 
 
 \subsection{Evaluation of this Architecture from an industrial Point of View}
+\subsubsection{Design of Guidelines for Interview}
+\subsubsection{Selection of proper Candidates}
+\subsubsection{Resulting Feedback}
