--- a/bibliography.bib
+++ b/bibliography.bib
@@ -81,3 +81,61 @@
   series       = 4,
   address      = {Berlin}
 }
+
+@misc{redHatMicroservices,
+    title   = {What are microservices?},
+    author  = {RedHat}, 
+    url     = {https://www.redhat.com/en/topics/microservices/what-are-microservices}
+}
+
+@misc{ChallengesMicroservices,
+    title   = {The Truth about Microservices},
+    author  = {Brian Atkisson},
+    company = {Red Hat},
+    year    = {2017}, 
+    month   = {5},
+    url     = {https://developers.redhat.com/blog/2017/05/04/the-truth-about-microservices/}
+}
+
+@misc{scsWolf,
+    title   = {Self-contained Systems: A Different Approach to Microservices},
+    author  = {Eberhard Wolff},
+    company = {innoQ Deutschlang GmbH},
+    year    = {2016}, 
+    month   = {11},
+    url     = {https://www.innoq.com/en/articles/2016/11/self-contained-systems-different-microservices/}
+}
+
+@misc{scs,
+    title   = {Self-Contained Systems},
+    author  = {innoQ Deutschlang GmbH},
+    year    = {2016}, 
+    month   = {11},
+    url     = {https://scs-architecture.org},
+    note    = {CC BY-SA 3.0}
+}
+
+@misc{eventDrivenMicroservices,
+    title       = {How to tame event-driven microservices},
+    subtitle    = {Understanding flow behavior and making changes are the main challenges of choreographed microservices. A workflow engine can help},
+    author      = {Bernd Rücker},
+    publisher   = {InfoWorld},
+    year        = {2019}, 
+    month       = {5},
+    url         = {https://www.infoworld.com/article/3391592/how-to-tame-event-driven-microservices.html}
+}
+
+@misc{EventBusExplained,
+    title   = {EventBusExplained},
+    author  = {Colin Decker},
+    company = {Google},
+    year    = {2017}, 
+    month   = {10},
+    url     = {https://github.com/google/guava/wiki/EventBusExplained}
+}
+
+@misc{kafka,
+    title   = {Introduction: Apache Kafka® is a distributed streaming platform. What exactly does that mean?},
+    author  = {Apache Kafka},
+    url     = {https://kafka.apache.org/intro}
+}
