--- a/bibliography.bib
+++ b/bibliography.bib
@@ -139,3 +139,44 @@
     author  = {Apache Kafka},
     url     = {https://kafka.apache.org/intro}
 }
+
+@book{bpmMethodStyle,
+    title     = {BPMN Method and Style, Second Edition, with BPMN Implementer's Guide},
+    author    = {B. Silver}, 
+    publisher = {Cody-Cassidy Press},
+    year      = 2011,
+    address   = {Aptos, CA 95003 USA},
+    edition   = 2,
+    isbn      = {978-0-9823681-1-4}
+}
+
+@book{praxisBPM,
+    title     = {Praxishandbuch BPMN mit Einführung in DMN},
+    author    = {J. Freund, B. Rücker}, 
+    publisher = {Carl Hanser Verlag},
+    year      = 2019,
+    address   = {München},
+    edition   = 6,
+    isbn      = {978-3-446-46111-6}
+}
+
+@misc{bpmDef,
+    title   = {BPM},
+    author  = {European Association of Business Process Management},
+    url     = {http://www.eabpm.org/?page_id=5}
+}
+
+@misc{orchestrationMicroServices,
+    title       = {The Microservices Workflow Automation Cheat Sheet},
+    author      = {Bernd Rücker},
+    publisher   = {Medium},
+    year        = {2018}, 
+    month       = {11},
+    url         = {https://blog.bernd-ruecker.com/the-microservice-workflow-automation-cheat-sheet-fc0a80dc25aa}
+}
+
+@misc{bpmMultiInstance,
+    title   = {Camunda Docs: Task Markers - Multiple Instance},
+    author  = {camunda Services GmbH},
+    url     = {https://docs.camunda.org/manual/7.6/reference/bpmn20/tasks/task-markers/#multiple-instance}
+}
